correção para atender os novos requisitos da diferenciação dos pacotes e suas ofertas